--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,63 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
-more: "read more »"
-url: "https://niklasbuschmann.github.io/"
-baseurl: "/contrast"
-paginate: 2
-permalink: pretty
-excerpt_separator: "\n\n\n" # two blank lines
+# Site
+title:              Massively
+bio:                'Jekyll version of the Massively theme by HTML5UP'
+description:        "Jekyll version of the Massively theme by HTML5UP"
+locale:             en_US
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
 
-style:
-  minimalist: false
-  dark: false
+defaults:
+- scope:
+    path: ''
+    type: posts
+  values:
+    permalink: "/blog/:title/"
+    layout: post
+    author:
 
-navigation:
-  - index.html
-  - archive.html
-  - about.md
+# Jekyll
+permalink:          /blog/:title/
+markdown:           kramdown
+highlighter:        rouge
+kramdown:
+  auto_ids:         true
+  footnote_nr:      1
+  entity_output:    as_char
+  toc_levels:       1..6
+  enable_coderay:   false
+mathjax:            true
+sass:
+  sass_dir:         _sass
+  style:            compressed
 
-# Build settings
-markdown: kramdown
-theme: jekyll-theme-cayman
-plugins:
+# Comments
+disqus_shortname:   default
+
+# Social
+analytics-id:       "default"
+twitter:            default
+facebook:           default
+instagram:          default
+github:             default
+
+# personal
+location:           Los Angeles, CA
+phone:              310-318-5555
+email:              info@default.com
+
+# Gems
+gems:
+  - jekyll-mentions
+  - jekyll-sitemap
   - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate
 
-comments:
-  disqus: "disqus-contrast"
-#  isso: "comments.mysite.org"
+paginate: 6
+paginate_path: "/blog/page:num/"
 
-links: # see http://fontawesome.io/icons/#brand for all possible icons
-  - twitter: "https://twitter.com/twitter/"
-  - github: "https://github.com/niklasbuschmann/contrast"
-  - envelope: "mailto:niklas.buschmann@posteo.de"
+jekyll-mentions:
+    base_url: https://github.com
 
-defaults: [{scope: {path: ""}, values: {layout: "default"}}, {scope: {path: "", type: "posts"}, values: {comments: true}}]
-sass: {style: expanded}
-plugins: [jekyll-feed, jekyll-paginate]
+# Exclude list
+exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile, old]
