--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,10 @@
----
-layout: default
-comments: true
-# other options
----
 
 # Site
 title:              Bill's tech blog
 bio:                'Code To Death'
 description:        "Bill is an excellent programmer driving an autonomous car"
 locale:             en_cn
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sunbingfeng.github.io" # the base hostname & protocol for your site
 
 
@@ -41,7 +36,7 @@ sass:
 disqus_shortname:   sunbingfeng-github-io
 
 # Social
-analytics-id:       "default"
+analytics-id:       UA-115747983-1
 github:             sunbingfeng
 twitter:            sunbingfeng2
 facebook:           sun.bill.3
