--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site
-title:              Bill's tech blog
+title:              Bill's Tech Blog
 bio:                'Code To Death'
 description:        "Bill is an excellent programmer driving an autonomous car"
 locale:             en_cn
