Add table of contents

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,15 @@ plugins:
   - jekyll-feed
   - jekyll-gist
   - jekyll-paginate
+  - jekyll-toc
+  
+# TOC Settings
+toc:
+ min_level: 1
+ max_level: 3
+ list_class: toc
+ list_class: toc__list
+ sublist_class: toc__sublist  
 
 paginate: 6
 paginate_path: "/blog/page:num/"
