fix: fix the social links display issue

--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,10 @@ analytics-id:       UA-147107754-1
 github:             sunbingfeng
 twitter:            sunbingfeng2
 facebook:           sun.bill.3
-instagram:          default
-
+medium:             bingfeng.sun
 
 # personal
 location:           Shenzhen, China
-# phone:              310-318-5555
-email:              bingfeng.sun@perceptin.io
 
 # This will require each of these plugins automatically.
 plugins:
