feat: update site title, add archive layout, and enhance navigation links

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Bill's Tech Blog
+title:              BillyCat
 bio:                'Code To Death'
 description:        "To Be Excellent"
 locale:             en_cn
